src/main/antlr/ssm/Employee.g4
grammar Employee ;
employeeDeclaration : '[' empID ']' firstName secondName '-' department;
empID : ID ;
firstName : ALPHABET ;
secondName : ALPHABET ;
department : ALPHABET ;
ALPHABET : [a-zA-Z]+;
ID : [0-9]+;
